bug 790321 - dont coalesce spdy hosts with socks proxy r=honzab