netwerk/base/src/nsProxyInfo.h
@@ -36,6 +36,10 @@ public:
   const char      *Type()  { return mType; }
   uint32_t         Flags() { return mFlags; }
 
+  bool IsDirect();
+  bool IsHTTP();
+  bool IsSOCKS();
+
 private:
   friend class nsProtocolProxyService;
 
